zTikz/antlr/TikzParser.py
# Generated from TikzParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class TikzParser ( Parser ):

    grammarFileName = "TikzParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'\\begin{tikzpicture}'", "'\\end{tikzpicture}'", 
                     "'\\draw'", "'\\fill'", "'\\path'", "'\\clip'", "'\\node'", 
                     "'\\filldraw'", "'\\pattern'", "'\\shade'", "'\\shadedraw'", 
                     "'rectangle'", "'circle'", "'ellipse'", "'grid'", "'parabola'", 
                     "'arc'", "'controls'", "'and'", "'node'", "'at'", "'cycle'", 
                     "'plot'", "'coordinates'", "'--'", "'->'", "'|-'", 
                     "'-|'", "'..'", "';'", "':'", "<INVALID>", "'('", "')'", 
                     "'+'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "']'", "<INVALID>", "'='" ]

    symbolicNames = [ "<INVALID>", "BEGIN_TIKZ", "END_TIKZ", "DRAW", "FILL", 
                      "PATHCMD", "CLIP", "NODE_CMD", "FILLDRAW", "PATTERN", 
                      "SHADE", "SHADEDRAW", "RECTANGLE", "CIRCLE", "ELLIPSE", 
                      "GRID", "PARABOLA", "ARC", "CONTROLS", "AND", "NODE", 
                      "AT", "CYCLE", "PLOT", "COORDINATES", "DASH_DASH", 
                      "DASH_ARROW", "PIPE_DASH", "DASH_PIPE", "DOT_DOT", 
                      "SEMI", "COLON", "COMMA", "LPAREN", "RPAREN", "PLUS", 
                      "LBRACK", "LBRACE", "RBRACE", "NUMBER", "ID", "COMMAND", 
                      "WS", "COMMENT", "ANY", "OPT_LBRACK", "OPT_RBRACK", 
                      "OPT_LBRACE", "OPT_EQ", "OPT_COMMA", "OPT_WS", "OPT_TEXT", 
                      "BRACE_LBRACE", "BRACE_RBRACE", "BRACE_CONTENT" ]

    RULE_document = 0
    RULE_skip_token = 1
    RULE_tikzpicture = 2
    RULE_tikzbody = 3
    RULE_tikz_stmt = 4
    RULE_standalone_node = 5
    RULE_skip_body = 6
    RULE_path_cmd = 7
    RULE_path_start = 8
    RULE_path_element = 9
    RULE_path_skip_token = 10
    RULE_shape_spec = 11
    RULE_circle_size = 12
    RULE_ellipse_size = 13
    RULE_arc_spec = 14
    RULE_arc_params = 15
    RULE_control_spec = 16
    RULE_node_inline = 17
    RULE_node_name = 18
    RULE_brace_text = 19
    RULE_brace_item = 20
    RULE_edge_op = 21
    RULE_coordinate = 22
    RULE_coord_value = 23
    RULE_numberunit = 24
    RULE_unit = 25
    RULE_tikz_options = 26
    RULE_option_list = 27
    RULE_option_item = 28
    RULE_opt_brace_text = 29
    RULE_option_atom = 30

    ruleNames =  [ "document", "skip_token", "tikzpicture", "tikzbody", 
                   "tikz_stmt", "standalone_node", "skip_body", "path_cmd", 
                   "path_start", "path_element", "path_skip_token", "shape_spec", 
                   "circle_size", "ellipse_size", "arc_spec", "arc_params", 
                   "control_spec", "node_inline", "node_name", "brace_text", 
                   "brace_item", "edge_op", "coordinate", "coord_value", 
                   "numberunit", "unit", "tikz_options", "option_list", 
                   "option_item", "opt_brace_text", "option_atom" ]

    EOF = Token.EOF
    BEGIN_TIKZ=1
    END_TIKZ=2
    DRAW=3
    FILL=4
    PATHCMD=5
    CLIP=6
    NODE_CMD=7
    FILLDRAW=8
    PATTERN=9
    SHADE=10
    SHADEDRAW=11
    RECTANGLE=12
    CIRCLE=13
    ELLIPSE=14
    GRID=15
    PARABOLA=16
    ARC=17
    CONTROLS=18
    AND=19
    NODE=20
    AT=21
    CYCLE=22
    PLOT=23
    COORDINATES=24
    DASH_DASH=25
    DASH_ARROW=26
    PIPE_DASH=27
    DASH_PIPE=28
    DOT_DOT=29
    SEMI=30
    COLON=31
    COMMA=32
    LPAREN=33
    RPAREN=34
    PLUS=35
    LBRACK=36
    LBRACE=37
    RBRACE=38
    NUMBER=39
    ID=40
    COMMAND=41
    WS=42
    COMMENT=43
    ANY=44
    OPT_LBRACK=45
    OPT_RBRACK=46
    OPT_LBRACE=47
    OPT_EQ=48
    OPT_COMMA=49
    OPT_WS=50
    OPT_TEXT=51
    BRACE_LBRACE=52
    BRACE_RBRACE=53
    BRACE_CONTENT=54

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DocumentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(TikzParser.EOF, 0)

        def tikzpicture(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TikzParser.TikzpictureContext)
            else:
                return self.getTypedRuleContext(TikzParser.TikzpictureContext,i)


        def skip_token(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TikzParser.Skip_tokenContext)
            else:
                return self.getTypedRuleContext(TikzParser.Skip_tokenContext,i)


        def getRuleIndex(self):
            return TikzParser.RULE_document

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDocument" ):
                listener.enterDocument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDocument" ):
                listener.exitDocument(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDocument" ):
                return visitor.visitDocument(self)
            else:
                return visitor.visitChildren(self)




    def document(self):

        localctx = TikzParser.DocumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_document)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 21749680832514) != 0):
                self.state = 64
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1]:
                    self.state = 62
                    self.tikzpicture()
                    pass
                elif token in [25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 38, 39, 40, 41, 44]:
                    self.state = 63
                    self.skip_token()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 69
            self.match(TikzParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Skip_tokenContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ANY(self):
            return self.getToken(TikzParser.ANY, 0)

        def NUMBER(self):
            return self.getToken(TikzParser.NUMBER, 0)

        def ID(self):
            return self.getToken(TikzParser.ID, 0)

        def SEMI(self):
            return self.getToken(TikzParser.SEMI, 0)

        def COLON(self):
            return self.getToken(TikzParser.COLON, 0)

        def COMMA(self):
            return self.getToken(TikzParser.COMMA, 0)

        def DASH_DASH(self):
            return self.getToken(TikzParser.DASH_DASH, 0)

        def DASH_ARROW(self):
            return self.getToken(TikzParser.DASH_ARROW, 0)

        def PIPE_DASH(self):
            return self.getToken(TikzParser.PIPE_DASH, 0)

        def DASH_PIPE(self):
            return self.getToken(TikzParser.DASH_PIPE, 0)

        def DOT_DOT(self):
            return self.getToken(TikzParser.DOT_DOT, 0)

        def LPAREN(self):
            return self.getToken(TikzParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(TikzParser.RPAREN, 0)

        def RBRACE(self):
            return self.getToken(TikzParser.RBRACE, 0)

        def COMMAND(self):
            return self.getToken(TikzParser.COMMAND, 0)

        def getRuleIndex(self):
            return TikzParser.RULE_skip_token

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSkip_token" ):
                listener.enterSkip_token(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSkip_token" ):
                listener.exitSkip_token(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSkip_token" ):
                return visitor.visitSkip_token(self)
            else:
                return visitor.visitChildren(self)




    def skip_token(self):

        localctx = TikzParser.Skip_tokenContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_skip_token)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 21749680832512) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TikzpictureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BEGIN_TIKZ(self):
            return self.getToken(TikzParser.BEGIN_TIKZ, 0)

        def END_TIKZ(self):
            return self.getToken(TikzParser.END_TIKZ, 0)

        def tikz_options(self):
            return self.getTypedRuleContext(TikzParser.Tikz_optionsContext,0)


        def tikzbody(self):
            return self.getTypedRuleContext(TikzParser.TikzbodyContext,0)


        def getRuleIndex(self):
            return TikzParser.RULE_tikzpicture

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTikzpicture" ):
                listener.enterTikzpicture(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTikzpicture" ):
                listener.exitTikzpicture(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTikzpicture" ):
                return visitor.visitTikzpicture(self)
            else:
                return visitor.visitChildren(self)




    def tikzpicture(self):

        localctx = TikzParser.TikzpictureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_tikzpicture)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(TikzParser.BEGIN_TIKZ)
            self.state = 75
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 74
                self.tikz_options()


            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 21818400313336) != 0):
                self.state = 77
                self.tikzbody()


            self.state = 80
            self.match(TikzParser.END_TIKZ)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TikzbodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tikz_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TikzParser.Tikz_stmtContext)
            else:
                return self.getTypedRuleContext(TikzParser.Tikz_stmtContext,i)


        def getRuleIndex(self):
            return TikzParser.RULE_tikzbody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTikzbody" ):
                listener.enterTikzbody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTikzbody" ):
                listener.exitTikzbody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTikzbody" ):
                return visitor.visitTikzbody(self)
            else:
                return visitor.visitChildren(self)




    def tikzbody(self):

        localctx = TikzParser.TikzbodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_tikzbody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 82
                self.tikz_stmt()
                self.state = 85 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 21818400313336) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Tikz_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def standalone_node(self):
            return self.getTypedRuleContext(TikzParser.Standalone_nodeContext,0)


        def path_cmd(self):
            return self.getTypedRuleContext(TikzParser.Path_cmdContext,0)


        def tikz_options(self):
            return self.getTypedRuleContext(TikzParser.Tikz_optionsContext,0)


        def skip_body(self):
            return self.getTypedRuleContext(TikzParser.Skip_bodyContext,0)


        def getRuleIndex(self):
            return TikzParser.RULE_tikz_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTikz_stmt" ):
                listener.enterTikz_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTikz_stmt" ):
                listener.exitTikz_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTikz_stmt" ):
                return visitor.visitTikz_stmt(self)
            else:
                return visitor.visitChildren(self)




    def tikz_stmt(self):

        localctx = TikzParser.Tikz_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_tikz_stmt)
        try:
            self.state = 91
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 87
                self.standalone_node()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 88
                self.path_cmd()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 89
                self.tikz_options()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 90
                self.skip_body()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Standalone_nodeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NODE_CMD(self):
            return self.getToken(TikzParser.NODE_CMD, 0)

        def brace_text(self):
            return self.getTypedRuleContext(TikzParser.Brace_textContext,0)


        def SEMI(self):
            return self.getToken(TikzParser.SEMI, 0)

        def tikz_options(self):
            return self.getTypedRuleContext(TikzParser.Tikz_optionsContext,0)


        def node_name(self):
            return self.getTypedRuleContext(TikzParser.Node_nameContext,0)


        def AT(self):
            return self.getToken(TikzParser.AT, 0)

        def coordinate(self):
            return self.getTypedRuleContext(TikzParser.CoordinateContext,0)


        def getRuleIndex(self):
            return TikzParser.RULE_standalone_node

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStandalone_node" ):
                listener.enterStandalone_node(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStandalone_node" ):
                listener.exitStandalone_node(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStandalone_node" ):
                return visitor.visitStandalone_node(self)
            else:
                return visitor.visitChildren(self)




    def standalone_node(self):

        localctx = TikzParser.Standalone_nodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_standalone_node)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(TikzParser.NODE_CMD)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==36:
                self.state = 94
                self.tikz_options()


            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==33:
                self.state = 97
                self.node_name()


            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==21:
                self.state = 100
                self.match(TikzParser.AT)
                self.state = 101
                self.coordinate()


            self.state = 104
            self.brace_text()
            self.state = 105
            self.match(TikzParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Skip_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ANY(self):
            return self.getToken(TikzParser.ANY, 0)

        def NUMBER(self):
            return self.getToken(TikzParser.NUMBER, 0)

        def ID(self):
            return self.getToken(TikzParser.ID, 0)

        def SEMI(self):
            return self.getToken(TikzParser.SEMI, 0)

        def COLON(self):
            return self.getToken(TikzParser.COLON, 0)

        def COMMA(self):
            return self.getToken(TikzParser.COMMA, 0)

        def DASH_DASH(self):
            return self.getToken(TikzParser.DASH_DASH, 0)

        def DASH_ARROW(self):
            return self.getToken(TikzParser.DASH_ARROW, 0)

        def PIPE_DASH(self):
            return self.getToken(TikzParser.PIPE_DASH, 0)

        def DASH_PIPE(self):
            return self.getToken(TikzParser.DASH_PIPE, 0)

        def DOT_DOT(self):
            return self.getToken(TikzParser.DOT_DOT, 0)

        def LPAREN(self):
            return self.getToken(TikzParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(TikzParser.RPAREN, 0)

        def RBRACE(self):
            return self.getToken(TikzParser.RBRACE, 0)

        def COMMAND(self):
            return self.getToken(TikzParser.COMMAND, 0)

        def getRuleIndex(self):
            return TikzParser.RULE_skip_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSkip_body" ):
                listener.enterSkip_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSkip_body" ):
                listener.exitSkip_body(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSkip_body" ):
                return visitor.visitSkip_body(self)
            else:
                return visitor.visitChildren(self)




    def skip_body(self):

        localctx = TikzParser.Skip_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_skip_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 21749680832512) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Path_cmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def path_start(self):
            return self.getTypedRuleContext(TikzParser.Path_startContext,0)


        def SEMI(self):
            return self.getToken(TikzParser.SEMI, 0)

        def tikz_options(self):
            return self.getTypedRuleContext(TikzParser.Tikz_optionsContext,0)


        def path_element(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TikzParser.Path_elementContext)
            else:
                return self.getTypedRuleContext(TikzParser.Path_elementContext,i)


        def getRuleIndex(self):
            return TikzParser.RULE_path_cmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPath_cmd" ):
                listener.enterPath_cmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPath_cmd" ):
                listener.exitPath_cmd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPath_cmd" ):
                return visitor.visitPath_cmd(self)
            else:
                return visitor.visitChildren(self)




    def path_cmd(self):

        localctx = TikzParser.Path_cmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_path_cmd)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.path_start()
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 110
                self.tikz_options()


            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 21697083469824) != 0):
                self.state = 113
                self.path_element()
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 119
            self.match(TikzParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Path_startContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DRAW(self):
            return self.getToken(TikzParser.DRAW, 0)

        def FILL(self):
            return self.getToken(TikzParser.FILL, 0)

        def PATHCMD(self):
            return self.getToken(TikzParser.PATHCMD, 0)

        def CLIP(self):
            return self.getToken(TikzParser.CLIP, 0)

        def NODE_CMD(self):
            return self.getToken(TikzParser.NODE_CMD, 0)

        def FILLDRAW(self):
            return self.getToken(TikzParser.FILLDRAW, 0)

        def PATTERN(self):
            return self.getToken(TikzParser.PATTERN, 0)

        def SHADE(self):
            return self.getToken(TikzParser.SHADE, 0)

        def SHADEDRAW(self):
            return self.getToken(TikzParser.SHADEDRAW, 0)

        def getRuleIndex(self):
            return TikzParser.RULE_path_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPath_start" ):
                listener.enterPath_start(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPath_start" ):
                listener.exitPath_start(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPath_start" ):
                return visitor.visitPath_start(self)
            else:
                return visitor.visitChildren(self)




    def path_start(self):

        localctx = TikzParser.Path_startContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_path_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 4088) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Path_elementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def coordinate(self):
            return self.getTypedRuleContext(TikzParser.CoordinateContext,0)


        def shape_spec(self):
            return self.getTypedRuleContext(TikzParser.Shape_specContext,0)


        def arc_spec(self):
            return self.getTypedRuleContext(TikzParser.Arc_specContext,0)

